# vk-playground

./: .clang-format  .gitignore  CMakeLists.txt  meson.build
cmake/: spirv2hpp.cmake  spirv_library.cmake
common/: CMakeLists.txt  application.cpp  application.hpp  device.cpp  device.hpp  meson.build  overlay.cpp  overlay.hpp  vulkan.cpp  vulkan.hpp
examples/: meson.build  simple.cpp  texture.cpp  triangle.cpp
examples/compute/: CMakeLists.txt  compute.comp  compute.cpp  compute.frag  compute.vert
examples/device/: CMakeLists.txt  device.cpp
examples/headless/: CMakeLists.txt  headless.cpp
examples/imgui/: CMakeLists.txt  imgui.cpp
examples/layer/: CMakeLists.txt  layer.cpp  layer.json
examples/texture/: CMakeLists.txt  texture.cpp  texture.frag  texture.vert
examples/triangle/: CMakeLists.txt  triangle.cpp
shaders/: meson.build  texture.vert  triangle.frag  triangle.vert
wsi/: CMakeLists.txt  wsi.glfwfallback.cpp  wsi.hpp  wsi.wayland.cpp  wsi.xcb.cpp
